# seekr

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
config/: seekr.example.yaml
migrations/: env.py
migrations/versions/: 20260522_2000_0001_initial_schema.py
scripts/: start.sh
src/seekr/: __main__.py  cli.py  config.py  logging.py  pipeline.py  scheduler.py
src/seekr/db/: engine.py  models.py  repository.py
src/seekr/diff/: engine.py
src/seekr/domain/: fingerprint.py  models.py
src/seekr/report/: builder.py
src/seekr/report/templates/: default.j2
src/seekr/sources/: base.py
src/seekr/sources/olx/: adapter.py  parser.py
src/seekr/telegram/: client.py
