[project]
name = "seekr"
version = "0.1.0"
description = "OLX.ua scraper that detects new/updated/reposted listings and reports them via Telegram."
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "Kostiantyn Grygoriev" }]
license = { text = "MIT" }
dependencies = [
    "httpx>=0.28",
    "selectolax>=0.3.30",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "pyyaml>=6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "apscheduler>=3.11",
    "jinja2>=3.1",
    "structlog>=24.4",
    "typer>=0.15",
    "tenacity>=9.0",
]

[project.scripts]
seekr = "seekr.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/seekr"]

[dependency-groups]
dev = []

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "SIM"]
ignore = ["E501"]
